# g923-mac-ffb

./: CLAUDE.md  CREDITS.md  Cargo.toml  README.es.md  README.md  g923.toml
app/: G923FFB  G923FFB.swift  build.sh
docs/: architecture.md  hardware-discovery.md  hidpp-protocol.md  references.md  roadmap.md
plugin/: build.sh  g923_telemetry.c  g923_telemetry.dylib  install.sh
src/: aperture.rs  classic_test.rs  cli.rs  config.rs  constant_force.rs  daemon.rs  daemon_test.rs  damper.rs  discover.rs  enumerate.rs  envelope.rs  ffb.rs  friction.rs  hidpp.rs  inertia.rs  input.rs  lib.rs  ping.rs  spring.rs  telemetry.rs  telemetry_monitor.rs  usb_test.rs
