[package]
name = "g923-mac-ffb"
version = "0.1.0" # MVP: FFB funcional con ATS en macOS Apple Silicon
edition = "2021"
description = "Userspace HID++ driver exploration for Logitech G923 Xbox on Apple Silicon"

[lib]
name = "g923_mac_ffb"
path = "src/lib.rs"

[[bin]]
name = "g923-ping"
path = "src/ping.rs"

[[bin]]
name = "g923-enumerate"
path = "src/enumerate.rs"

[[bin]]
name = "g923-discover"
path = "src/discover.rs"

[[bin]]
name = "g923-constant-force"
path = "src/constant_force.rs"

[[bin]]
name = "g923-spring"
path = "src/spring.rs"

[[bin]]
name = "g923-damper"
path = "src/damper.rs"

[[bin]]
name = "g923-friction"
path = "src/friction.rs"

[[bin]]
name = "g923-inertia"
path = "src/inertia.rs"

[[bin]]
name = "g923-aperture"
path = "src/aperture.rs"

[[bin]]
name = "g923-envelope"
path = "src/envelope.rs"

[[bin]]
name = "g923-input"
path = "src/input.rs"

[[bin]]
name = "g923-telemetry-monitor"
path = "src/telemetry_monitor.rs"

[[bin]]
name = "g923"
path = "src/cli.rs"

[[bin]]
name = "g923-daemon"
path = "src/daemon.rs"

[[bin]]
name = "g923-usb-test"
path = "src/usb_test.rs"

[[bin]]
name = "g923-classic-test"
path = "src/classic_test.rs"

[[bin]]
name = "g923-daemon-test"
path = "src/daemon_test.rs"

[dependencies]
hidapi = { version = "2.6", features = ["linux-static-hidraw", "macos-shared-device"] }
libc = "0.2"
rusb = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
